# eezy-lang

./: Cargo.toml  LICENSE  Makefile  README.md  clippy.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: astro.yml  ci.yml  docs.yml
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: about-author.md  getting-started.mdx
examples/: fibonacci.ez  hello-world.ez
src/: cli.rs  errors.rs  lib.rs  main.rs
src/lexer/: mod.rs  token.rs
